--- a/PostCard.html
+++ b/PostCard.html
@@ -17,7 +17,7 @@
         <section>
             <form class="postcard">
                 <div class="postcard-header">
-                    <img src="https://goo.gl/images/KHzrr6">
+                    <img src="http://assets.breatheco.de/apis/img/icon/4geeks.png">
                     <h1>My PostCard</h1>
                 </div>
                 <div class="postcard-body">
